--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </ul>
   <p>AKINTUNDE JIMOH & CO<br><em>Trainee Associate</em></p>
   <ul>
-    <li>Analysed </li>
+    <li>Led a team </li>
     <li>Contributed to</li>
     <li>Developed</li>
   </ul>
